Fixing minor layout issues.

--- a/src-gwt/org/opencms/ade/galleries/client/ui/css/previewdialog.css
+++ b/src-gwt/org/opencms/ade/galleries/client/ui/css/previewdialog.css
@@ -41,7 +41,7 @@ div.previewDialog {
 	position: absolute;
 	top:0px;
 	right:0px;
-	margin:2px;
+	margin:6px;
 }
 
 /* Preview panel */
