--- a/src-gwt/org/opencms/gwt/client/ui/css/floatDecoratedPanel.css
+++ b/src-gwt/org/opencms/gwt/client/ui/css/floatDecoratedPanel.css
@@ -11,7 +11,7 @@
 
 .decorationBox.decorationBoxSmall {
 	float:left;
-	margin-top: 2px;
+	margin-top: 0px;
 }
 
 
