--- a/src-gwt/org/opencms/gwt/client/ui/css/input.css
+++ b/src-gwt/org/opencms/gwt/client/ui/css/input.css
@@ -89,10 +89,11 @@ input.textboxGhostMode {
 	color: value("constants.css.textColorDisabled") !important;
 }
 
-.textBoxWidget, .checkBox {}
+.textBoxWidget {}
 
-.checkBox .html-face {
+.checkBox div.html-face {
 	font-weight: normal; 
+	line-height: value("constants.css.lineHeight");
 }
 
 input.textBoxReadOnly {
