--- a/src-gwt/org/opencms/gwt/client/ui/css/notification.css
+++ b/src-gwt/org/opencms/gwt/client/ui/css/notification.css
@@ -80,7 +80,7 @@ div.notificationContainer, .notificationContainer div.messagesPanel > div{
 }
 
 .messagesPanel {
-	margin-top: 30px; 	
+	margin-top: 55px; 	
 } 
 
 .notificationMessage div.messageContent{
